# tempest-rs

./: Cargo.toml
.github/workflows/: docs.yaml  linux.yaml  windows.yaml
crates/tempest-common/: Cargo.toml
crates/tempest-core/: Cargo.toml
crates/tempest-core/src/: app.rs
crates/tempest-ecs/: Cargo.toml
crates/tempest-ecs/macros/: Cargo.toml
crates/tempest-ecs/macros/src/: component.rs  registry.rs
crates/tempest-ecs/src/: component.rs  component_pool.rs  graph.rs  lib.rs  registry.rs  sparse_set.rs
crates/tempest-math/: Cargo.toml
crates/tempest-math/src/f32/: angle.rs  mat4.rs
crates/tempest-render/: Cargo.toml
crates/tempest-render/data/shaders/: structures.wgsl
crates/tempest-render/src/: lib.rs  renderer.rs  types.rs
crates/tempest_common/: Cargo.toml
crates/tempest_common/src/: lib.rs  mesh.rs  resources.rs
crates/tempest_core/: Cargo.toml
crates/tempest_core/src/: app.rs  lib.rs
crates/tempest_ecs/: Cargo.toml
crates/tempest_ecs/macros/: Cargo.toml
crates/tempest_ecs/macros/src/: lib.rs
crates/tempest_ecs/src/: entities.rs  slot_map.rs  sparse_index.rs  sparse_map.rs  transformation.rs  world.rs
crates/tempest_math/: Cargo.toml
crates/tempest_math/src/: lib.rs
crates/tempest_math/src/f32/: mat4.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
crates/tempest_render/: Cargo.toml
crates/tempest_render/data/: triangle.wgsl
crates/tempest_render/data/shaders/: vertex_layout.wgsl
crates/tempest_render/src/: renderer.rs  shader.rs
examples/: hello_world.rs
