[package]
name = "tempest"
version = "0.1.0-dev"
edition = "2021"
exclude = ["crates/"]
license = "MIT OR Apache-2.0"
rust-version = "1.67.0"

[workspace]
members = [
    "crates/*"
]

resolver = "2"

[dependencies]
tempest_core = { path = "crates/tempest_core" }
tempest_ecs = { path = "crates/tempest_ecs" }
tempest_math = { path = "crates/tempest_math" }
tempest_render = { path = "crates/tempest_render" }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"