[package]
name = "tempest"
version = "0.1.0-dev"
edition = "2021"
exclude = ["crates/"]
license = "MIT OR Apache-2.0"
rust-version = "1.67.0"

[workspace]
members = [
    "crates/*"
]

resolver = "2"

[dependencies]
tempest-core = { path = "crates/tempest-core" }
tempest-ecs = { path = "crates/tempest-ecs" }
tempest-math = { path = "crates/tempest-math" }
tempest-render = { path = "crates/tempest-render" }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"