[package]
name = "tempest-render"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
tempest-ecs = { path = "../tempest-ecs" }
tempest-math = { path = "../tempest-math" }
bytemuck = "1"
env_logger = "0.10"
handlebars = "4"
log = "0.4"
once_cell = "1"
rust-embed = { version = "6", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
wgpu = "0.15"
winit = "0.28"